# machine-vision-acquisition

./: .gitignore  CMakeLists.txt  LICENSE  README.md  docker-compose.yml  extract_metadata.ipynb  pyproject.toml  remote-viewing.md  requirements.txt
.devcontainer/: Dockerfile  README.md  aravis.dockerfile  dev.dockerfile  devcontainer.json
.devcontainer/library-scripts/: common-debian.sh  docker-debian.sh
docker/: aravis-prebuilt.dockerfile  aravis.dockerfile  builder.dockerfile  builder.rpi.dockerfile  docker-compose.extras.yml  multi-sdk.dockerfile
docker/ros/: aravis.node.dockerfile  ros-aravis.dockerfile  ros-example.dockerfile  ros1.examplenode.dockerfile  ros2.examplenode.dockerfile
etc/: capture-config-head1.json  capture-config-head2.json  capture-config-underwater.json  capture-config.json  capture-fake-config.json  capture-fops-heada.json  capture-mobileimaging-config.json  capture-mobileimaging-gpiotrigger-config.json  config.schema.json  datacapture-config.json  datacapture.schema.json  nmcli-dhcp-manager.service
etc/sync/: README.md  lsyncd.conf.lua
examples/: ContinuousCapture.py  KeaViewerExample.py  aravis.py
misc/: CMakeLists.txt  ChronoWidgets.py  ContinuousCapture.py  exampleHelper.h  main.cpp
pipelines/export_day/: main.nf  nextflow.config  rclone.template.conf
singularity/: rclone.def
src/machine_vision_acquisition_python/: models.py  utils.py
src/machine_vision_acquisition_python/calibration/: distortion.py  interface.py  libcalib.py  shared.py  stereo.py
src/machine_vision_acquisition_python/capture/: __main__.py  capture.py  cli.py  keyboard.py  misc.py
src/machine_vision_acquisition_python/converter/: __main__.py  processing.py
src/machine_vision_acquisition_python/datacapture/: __main__.py  capture.py
src/machine_vision_acquisition_python/interfaces/: aravis.py  chronoptics.py
src/machine_vision_acquisition_python/process/: cli.py  processing.py
src/machine_vision_acquisition_python/viewer/: __main__.py  (+2 more)
src/utils/: calibrate.py  nmcli-dhcp-manager.py  requirements.nmcli-dhcp-manager.txt  schema_generator.py  video-sync.py
sync/: README.md  lsyncd.conf.lua
test/: conftest.py  test_sparse_stereo.py  tests.py
test/data/: 2022-12-22-BioEng-Calib.json
web/templates/: index.html
(+10 files in other folders)
