[tool.poetry]
name = "machine_vision_acquisition_python"
version = "0.3.2"
description = "PFR library for machine vision interfacing"
authors = ["Manu Lange <manu.lange@plantandfood.co.nz>"]
packages = [
    { include = "machine_vision_acquisition_python", from = "src" },
]

[tool.poetry.scripts]
mva_process = 'machine_vision_acquisition_python.process.cli:cli'
mva_capture = 'machine_vision_acquisition_python.capture.cli:cli'

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.2"
pydantic = "^1.9.1"
Flask = "^2.1.2"
sshkeyboard = "^2.3.1"
pandas = "^1.4.2"
openpyxl = "^3.0.10"
opencv-python-headless = "^4.6.0"

[tool.poetry.extras]
stereo = ["torch", "torchvision"]

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
